--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "now-node": "^1.6.2-dev.8",
